--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
 {{ end }}
 
 {{ define "main" }}
-    <section class="white hero" id="hero">
+    <section class="left white hero" id="hero">
         {{ partial "header" . }}
 
         <div class="inner">
@@ -88,7 +88,7 @@
         </div>
     </section>
 
-    <section class="red portable hidden" id="portable">
+    <section class="left red portable hidden" id="portable">
         <div class="inner">
             <div class="content">
             <h1>Effortlessly Portable.</h1>
@@ -154,7 +154,7 @@
         </div>
     </section>
 
-    <section class="white together hidden" id="together">
+    <section class="left white together hidden" id="together">
         <div class="inner">
             <div class="content">
                 <h1>Better Together.</h1>
