--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,10 +2,12 @@
   <nav>
     <ul>
       <li>
-        <a href="/"><div class="icon-padlock"></div></a>
+        <a href="/"><div class="brand-icon icon-padlock"></div></a>
       </li>
       <li class="wide"><a href="/business/">Business</a></li>
       <li class="wide"><a href="/blog/">Blog</a></li>
+      <li class="wide"><a href="/guides/">Guides</a></li>
+      <li class="wide"><a href="/downloads/">Downloads</a></li>
     </ul>
   </nav>
 
