--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -1,14 +1,18 @@
 <li>
-    <article>
-        <a class="title" href="{{ .RelPermalink }}">
+    <a href="{{ .RelPermalink }}">
+        <div class="thumbnail" style="background-image: url({{ .Params.thumbnail | default "/img/thumb_default.png" }})">
+        </div>
+
+        <div class="body">
             <h3>{{ .Title }}</h3>
             <div class="publish-date">{{ dateFormat "Monday, Jan 2, 2006" .PublishDate }}</div>
-        </a>
-        <p>
-            {{ .Summary }}
-            {{- if .Truncated -}}
-                ... <a href="{{ .RelPermalink }}">Read More</a>
-            {{ end }}
-        </p>
-    </article>
+
+            <div class="summary">
+                {{ .Summary }}
+                {{- if .Truncated -}}
+                ... <strong>click to read more</strong>
+                {{ end }}
+            </div>
+        </div>
+    </a>
 </li>
