Add menu for narrow screens

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,8 +1,11 @@
 <header>
   <nav>
     <ul>
-      <li>
-        <a href="/"><div class="brand-icon icon-padlock"></div></a>
+      <li class="wide">
+        <a href="/"><div class="brand-icon icon-padlock wide"></div></a>
+      </li>
+      <li class="narrow">
+        <a href="#" class="open-menu"><div class="icon-bars"></div></a>
       </li>
       <li class="wide"><a href="/business/">Business</a></li>
       <li class="wide"><a href="/blog/">Blog</a></li>
