Add upgrade note to landing page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -53,6 +53,21 @@
         </div>
     </section>
 
+    <section class="red hidden upgrade">
+        <div class="inner">
+            <div class="content">
+                <div>
+                    <a href="/blog/padloc-3-is-here">Padloc 3 is here!</a> Looking to upgrade from version 2? Check out our <a href="/guides/migrate-v3" class="underline">migration guide</a>!
+                </div>
+            </div>
+        </div>
+
+        <div class="bg-color">
+            <div></div>
+            <div></div>
+        </div>
+    </section>
+
     <section class="blue right simple hidden" id="simple">
         <div class="inner">
 
@@ -88,7 +103,7 @@
         </div>
     </section>
 
-    <section class="left red portable hidden" id="portable">
+    <section class="left black portable hidden" id="portable">
         <div class="inner">
             <div class="content">
             <h1>Effortlessly Portable.</h1>
@@ -121,7 +136,7 @@
         </div>
     </section>
 
-    <section class="right black transparent hidden" id="transparent">
+    <section class="right red transparent hidden" id="transparent">
         <div class="inner">
             <div class="content">
                 <h1>Transparently Secure.</h1>
