--- a/static/css/base.css
+++ b/static/css/base.css
@@ -210,7 +210,8 @@ ul.articles {
 ul.articles li {
   background: #fff;
   border-radius: 8px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0 0 10px;
+  box-shadow: 0 0px 10px rgba(154, 160, 185, 0.05),
+    0 0px 40px rgba(166, 173, 201, 0.2);
   margin: 30px 0;
   overflow: hidden;
   --color-highlight: #23b4ff;
