Add blog post about release of browser extension

--- a/layouts/section/downloads.html
+++ b/layouts/section/downloads.html
@@ -73,7 +73,7 @@
             {{ end }}
         </ul>
 
-        <h3>Browser Extensions</h3>
+        <h3 id="browser-extensions">Browser Extensions</h3>
 
         <ul class="downloads-list">
             {{ range where (.Param "downloads") "type" "extension" }}
